--- a/websrc/layout/signinTop.html
+++ b/websrc/layout/signinTop.html
@@ -10,7 +10,7 @@
         <a class="profile top-tab-item display-flex-center" onclick="top.location.href='../profile.html'">PROFILE</a>
         <a class="library top-tab-item display-flex-center" onclick="top.location.href='../library.html'">LIBRARY</a>
         <a class="events top-tab-item display-flex-center" onclick="top.location.href='../events.php'">EVENTS</a>
-        <a class="events top-tab-item display-flex-center" onclick="top.location.href='../about.php'">ABOUT</a>
+        <a class="about top-tab-item display-flex-center" onclick="top.location.href='../about.php'">ABOUT</a>
     </div>
     <div class="top-right-sigin"><span class="top-right-signin-a">THIS IS THE SIGN IN PAGE</span></div>
 </div>
