--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -191,6 +191,76 @@
     position: relative;
     z-index: 10;
 }
+.footer-left-info-about {
+    position: absolute;
+    left: 20px;
+    top: 2550px;
+    color: #ffffff;
+}
+
+.footer-right-info-about {
+    position: absolute;
+    right: 20px;
+    top: 2550px;
+
+}
+
+.footer-face-about {
+    width: 154px;
+    height: 119px;
+}
+
+.left-eye-footer-about {
+    width: 47px;
+    height: 46px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+.right-eye-footer-about {
+    width: 47px;
+    height: 46px;
+    background: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+.footer-noth-about {
+    width: 113px;
+    height: 53px;
+    position: absolute;
+    top: 19px;
+    left: 20px;
+    overflow: hidden;
+}
+
+.footer-botface-about {
+    width: 113px;
+    height: 53px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.footer-mouse-about {
+    width: 108px;
+    height: 99px;
+    background: white;
+    position: absolute;
+    top: 20px;
+    left: 23px;
+    border-radius: 50%;
+    z-index: 0;
+}
 
 .footer-right-info {
     position: absolute;
@@ -619,6 +689,19 @@
 .index-last-map {
     padding: 40px 20px;
     width: 100%;
+}
+.index-map {
+    padding: 0px 20px;
+    width: 100%;
+}
+
+.index-map img{
+    height: 1000px;
+    width: 1500px;
+}
+.index-last-map img{
+    height: 450px;
+    width: 1500px;
 }
 .sort-text {
     line-height: 70px;
