--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -185,7 +185,7 @@
     position: absolute;
     left: 20px;
     top: calc(50% - 47px);
-    color: #ffffff;
+    color: #000000;
     width: 100%;
     height: 100%;
     position: relative;
@@ -265,7 +265,8 @@
 .footer-right-info {
     position: absolute;
     right: 20px;
-    top: 1130px;
+    top: 30px;
+    
 
 }
 
@@ -283,7 +284,7 @@
 .left-eye-footer {
     width: 47px;
     height: 46px;
-    background: rgb(255, 255, 255);
+    background: black;
     position: absolute;
     top: 0;
     left: 0;
@@ -299,6 +300,7 @@
     right: 0;
     border-radius: 50%;
     z-index: 2;
+    background: black;
 }
 
 .footer-noth {
@@ -308,6 +310,7 @@
     top: 19px;
     left: 20px;
     overflow: hidden;
+    background: black;
 }
 .footer-botface {
     width: 113px;
@@ -317,6 +320,7 @@
     left: 0;
     overflow: hidden;
     z-index: 1;
+    background: black;
 }
 
 .footer-botface-about {
@@ -337,6 +341,7 @@
     left: 23px;
     border-radius: 50%;
     z-index: 0;
+    background: black;
 }
 
 /*======================================================================================================================*/
