--- a/websrc/css/login.css
+++ b/websrc/css/login.css
@@ -33,6 +33,15 @@ body {
     top: 134px;
 }
 
+.background_style_com {
+    width: 100%;
+    height: 100%;
+    background: rgba(18, 158, 6, 1);
+    position: absolute;
+    top: 134px;
+}
+
+
 .email {
     width: 430px;
     height: 59px;
