--- a/websrc/artgallery/art gallery.css
+++ b/websrc/artgallery/art gallery.css
@@ -79,8 +79,8 @@
     cursor: pointer;
 }
 
-/*mona lisa painting*/
-header {
+/*artwork.php*/
+section {
     position:absolute;
     top:0;
     left:0;
@@ -89,7 +89,7 @@ header {
     justify-content:center;
     align-items:center
 } 
-header .monalisawrap {
+.artworkwrap {
     position: absolute; top: 30%;
     padding-top:15px;
     width: 40%;
@@ -97,37 +97,40 @@ header .monalisawrap {
     justify-content:center;
     align-items:center
 }
-header .monalisawrap:after {
-    margin-top: 80%;
-    font-size: 2em;
-    content: '';
-    white-space: nowrap;
-    overflow: hidden;
-    flex-grow:0;
-    max-width:0px;
-    transition: 1s cubic-bezier(.4,0,.2,1);
-    margin: 0 .5rem;
-}
-header .monalisawrap:hover:after {
-    max-width:300px;
-}
-header .monalisaimg {
+.artworkwrap img {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-header .monalisaimg img {
-    margin-top: 80%;
-    width:200px;
+.artworkimg img {
+    margin-top: 60%;
+    width:240px;
     height: auto;
 }
+.artworkwrap img {
+    height: 100%;
+}
 
-/*purchase button*/
-.purchase {
-    position: absolute; left: 80%; top: 20%;
+.artworkimg {
+    transition: transform 0.4s;
+    -webkit-transition: -webkit-transform 0.4s;
+    -moz-transition: -moz-transform 0.4s;
+    -o-transition: -o-transform 0.4s;
+}
+.artworkimg:hover{
+	transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -o-transform: scale(1.4);
+}
+
+/*preference button*/
+.preference {
+    position: absolute; left: 75%; top: 20%;
     font-family: 'Inter';
 }
-.purchasebutton {
+.preferencebutton {
     padding: 15px 25px;
     font-size: 22px;
     text-align: center;
@@ -139,8 +142,8 @@ header .monalisaimg img {
     border-radius: 15px;
     box-shadow: 0 9px #999;
 }
-.purchasebutton:hover {background-color: rgb(47, 82, 134)}
-.purchasebutton:active {
+.preferencebutton:hover {background-color: rgb(47, 82, 134)}
+.preferencebutton:active {
     background-color: rgb(47, 82, 134);
     box-shadow: 0 5px #666;
     transform: translateY(4px);
@@ -174,47 +177,6 @@ header .monalisaimg img {
     height: 40px;
     color: black;
     cursor: pointer;
-}
-
-/*starry night*/
-header {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    display:flex;
-    justify-content:center;
-    align-items:center
-} 
-header .starrynightwrap {
-    padding-top:15px;
-    width: 40%;
-    display:flex;
-    justify-content:center;
-    align-items:center
-}
-header .starrynightwrap:after {
-    font-size: 2em;
-    content: 'The Starry Night';
-    white-space:nowrap;
-    overflow:hidden;
-    flex-grow:0;
-    max-width:0px;
-    transition: 1s cubic-bezier(.4,0,.2,1);
-    margin: 0 .5rem;
-}
-header .starrynightwrap:hover:after {
-    max-width:300px;
-}
-header .starrynightimg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-header .starrynightimg img {
-    margin-top: 60%;
-    width:253px;
-    height:200px;
 }
 
 /*mona lisa info page*/
@@ -291,73 +253,3 @@ header .starrynightimg img {
     z-index: -10;
 }
 
-/*starry night info page*/
-.monalisainfo-backg {
-    background-color: beige;
-}
-.infopagehead{
-	position:fixed;
-	top:0; left:0; right:0;
-	z-index: 1000;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	background: beige;
-	padding: 2rem 9%;
-}
-.infopagehead .navbar a{
-    font-size: 2rem;
-    margin-left: 2rem;
-    color:white;
-}
-.infopagehead h1{
-    position: absolute; left: 16%; top: 22%;
-    color: black;
-    font-family: 'Inter';  
-}
-.homeiconinfo {
-    position: absolute; left: 80%; top: 36%;
-    width: 30px;
-    height: 30px;
-    color: black;
-    cursor: pointer;
-}
-.arrowbinfo {
-    transform: rotate(180deg);
-    position: absolute; left: 70%; top: 35%;
-    width: 40px;
-    height: 40px;
-    color: black;
-    cursor: pointer;
-}
-
-.starrynightinfoimg {
-    margin-top: 18%;
-    margin-left: 10%;
-    transition: transform 0.4s;
-    -webkit-transition: -webkit-transform 0.4s;
-    -moz-transition: -moz-transform 0.4s;
-    -o-transition: -o-transform 0.4s;
-}
-.starrynightinfoimg:hover{
-	transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -o-transform: scale(1.2);
-}
-
-.sndescription {
-    position: absolute; top: 35%; left: 50%;
-    max-width: 500px;
-    font-size: 1.1em;
-    font-family: 'Inter';  
-    color: black;
-}
-.backimg {
-    position: absolute; top: 22%; left: 40%;
-    background-color: azure;
-    width: 60%;
-    height: 78%;
-    z-index: -10;
-}
