--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -590,9 +590,8 @@
     left: 1em;
 }
 .library-last-d {
-    margin-top: 30px;
+    margin: 30px;
     min-width: 1240px;
-    margin-bottom: 30px;
 }
 .library-last-left-info {
     padding: 20px 15px;
@@ -720,9 +719,11 @@
     width: 1500px;
     height: 1000px;
 }
-.index-last-map img{
-    width: 1500px;
-    height:530px;
+.index-last-map #map{
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+    margin-top: 50px;
 }
 .sort-text {
     line-height: 70px;
