margin-library-map

--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -568,8 +568,8 @@
     text-align: center;
 }
 .library-info {
-    margin: 0px 30px;
-    padding: 10px 20px;
+    margin: 0px 55px;
+    /* padding: 10px 20px; */
 }
 
 .search-map-d {
