--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -455,6 +455,7 @@
     background-color: #D9D9D9;
     overflow: hidden;
     align-items: center;
+    justify-content: center;
 }
 .profile-last-img-d {
     width: 87px;
